refatoraç~poes e criacao de metodo generico nas classe POI e refatoracao das service para o padrao java 17